# hydra-lsp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: config_ldm_precompute_dataset.yaml  config_materials.yaml  config_rec_lite_concat.yaml  config_reconstruction.yaml
hydra_lsp/: __init__.py  __main__.py  autocomplete.py  context.py  hover.py  intel.py  loader.py  parser.py  server.py  utils.py
tests/: test_hydra_lsp.py  test_loader.py
tests/artifacts/: config_ldm_precompute_dataset.yaml  config_materials.yaml  local_context.yaml  local_path.yaml
